# elasticsearch-native-realm-operator

./: .env.test  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  mypy.ini  pyproject.toml  time-up.sh
deploy/: README.md  cluster.yaml
deploy/base/: kustomization.yaml
deploy/base/elastic-system/: kustomization.yaml
deploy/base/elastic-system/native-realm-operator/: cluster-role.yaml  kustomization.yaml  service-account.yaml
deploy/base/elastic-system/native-realm-operator/crds/: elasticsearch-native-user-crd.yaml  kustomization.yaml
deploy/base/elasticsearch/: elasticsearch.yaml  ingress.yaml  kibana.yaml  kustomization.yaml
deploy/base/elasticsearch/users/: custom-user.yaml  kustomization.yaml
deploy/native-realm-operator/: cluster-role-binding.yaml  cluster-role.yaml  crds.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  service-account.yaml
deploy/native-realm/roles/: custom-role.yaml
deploy/native-realm/users/: custom-user.yaml
elasticsearch_native_realm_operator/: client.py  config.py  constants.py  main.py  models.py
elasticsearch_native_realm_operator/framework/: models.py  test_models.py
elasticsearch_native_realm_operator/kopf_ext/: __init__.py  middleware.py  models.py  utils.py
elasticsearch_native_realm_operator/resources/: role.py  user.py
scripts/: generate_crds.py
tasks/: __init__.py  helpers.py  local.py  release.py  run.py  test.py
tests/: conftest.py  test_version.py
tests/cluster/: docker-compose.yaml  mount-images.sh
tests/operator/: conftest.py  test_apply_user.py
tests/utils/: kubectl.py
