[tool.poetry]
name = "elasticsearch-native-realm-operator"
version = "0.1.0"
description = ""
authors = ["Jack Smith"]
packages = [
    {include = "elasticsearch_native_realm_operator"},
]
homepage = "https://github.com/jacksmith15/elasticsearch-native-realm-operator"
repository = "https://github.com/jacksmith15/elasticsearch-native-realm-operator"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
kopf = "^1.33"
elasticsearch = "^7.12"
pydantic = "^1.8"
furl = "^2.1"
kubernetes = "^18.20"
jsonpointer = "^2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
toml = "^0.10"
ipdb = "^0.13.7"
ipython = "^7.22.0"
mypy = "^0.812"
pyflakes = "^2.3.1"
invoke = "^1.5.0"
termcolor = "^1.1.0"
pytest-cov = "^2.11.1"
changelog-cmd = "^0.1.2"
pytest-docker = "^0.10"
pytest-dotenv = "^0.5"

[tool.isort]
# Setting compatible with black. See https://black.readthedocs.io/en/stable/compatible_configs.html
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.black]
line-length = 120
target-version = ['py38']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = "tests"
python_functions = "should_*"
# pytest-dotenv settings
env_override_existing_values = 1
env_files = ".env.test"

# Structure: https://docs.pytest.org/en/stable/warnings.html
# Values:    https://docs.python.org/3/library/warnings.html#describing-warning-filters
#            action:message:category:module:line
filterwarnings = [
  "ignore:.*loop argument.*:DeprecationWarning:asyncio[.*]",
  "ignore:.*loop argument.*:DeprecationWarning:aiojobs[.*]",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
